Fix Fluentd LivenessProbe (#40)
`[[ .. ]]` is [a bashism](https://stackoverflow.com/a/47576482) and won't work when called with `/bin/sh`, meaning the LivenessProbe as written will not be triggered for stuck or not-live fluentd containers.

Annoyingly, `/bin/sh` will show an error when called this way:
```bash
root@fluentd-7mprs:/# sh liveness.sh
liveness.sh: 8: liveness.sh: [[: not found
liveness.sh: 15: liveness.sh: [[: not found
```

... But still exit with a non-error return code!
```bash
root@fluentd-7mprs:/# /bin/sh liveness.sh
liveness.sh: 8: liveness.sh: [[: not found
liveness.sh: 15: liveness.sh: [[: not found
root@fluentd-7mprs:/# echo $?
0
```

Anyway; this test doesn't need the `[[` syntax and works properly with the POSIX-compliant `[`.

Signed-off-by: Florent Delannoy <florent.delannoy@gmail.com>

--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -139,13 +139,13 @@ spec:
                 exit 1;
               fi;
               touch -d "${STUCK_THRESHOLD_SECONDS} seconds ago" /tmp/marker-stuck;
-              if [[ -z "$(find /var/log/fluentd-buffers -type f -newer /tmp/marker-stuck -print -quit)" ]];
+              if [ -z "$(find /var/log/fluentd-buffers -type f -newer /tmp/marker-stuck -print -quit)" ];
               then
                 rm -rf /var/log/fluentd-buffers;
                 exit 1;
               fi;
               touch -d "${LIVENESS_THRESHOLD_SECONDS} seconds ago" /tmp/marker-liveness;
-              if [[ -z "$(find /var/log/fluentd-buffers -type f -newer /tmp/marker-liveness -print -quit)" ]];
+              if [ -z "$(find /var/log/fluentd-buffers -type f -newer /tmp/marker-liveness -print -quit)" ];
               then
                 exit 1;
               fi;
