Fixing liveness probe (#43)
* Fixing liveness probe

Signed-off-by: Chris Bartlett <bartlettc@gmail.com>

* Adding example env for threshhold seconds

Signed-off-by: Chris Bartlett <bartlettc@gmail.com>

* Bumping chart version

Signed-off-by: Chris Bartlett <bartlettc@gmail.com>

--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -137,7 +137,7 @@ spec:
             - '-c'
             - >
               LIVENESS_THRESHOLD_SECONDS=${LIVENESS_THRESHOLD_SECONDS:-300};
-              STUCK_THRESHOLD_SECONDS=${LIVENESS_THRESHOLD_SECONDS:-900};
+              STUCK_THRESHOLD_SECONDS=${STUCK_THRESHOLD_SECONDS:-900};
               if [ ! -e /var/log/fluentd-buffers ];
               then
                 exit 1;
