Add affinity configuration to fluentd-elasticsearch (#62)
Signed-off-by: Ben Sully <ben.sully@yougov.com>

--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -98,6 +98,14 @@ tolerations: {}
   #   operator: Exists
   #   effect: NoSchedule
 
+affinity: {}
+  # nodeAffinity:
+  #   requiredDuringSchedulingIgnoredDuringExecution:
+  #     nodeSelectorTerms:
+  #     - matchExpressions:
+  #       - key: node-role.kubernetes.io/master
+  #         operator: DoesNotExist
+
 nodeSelector: {}
 
 service: {}
