--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -121,28 +121,7 @@ spec:
           readOnly: true
         - name: config-volume
           mountPath: /etc/fluent/config.d
-      {{- if .Values.awsSigningSidecar.enabled }}
-      - name: {{ include "fluentd-elasticsearch.fullname" . }}-aws-es-proxy
-        image: {{ .Values.awsSigningSidecar.image.repository }}:{{ .Values.awsSigningSidecar.image.tag }}
-        imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
-        args: ["-endpoint", "{{ .Values.elasticsearch.scheme }}://{{ .Values.elasticsearch.host }}:{{ .Values.elasticsearch.port }}",
-               "-listen",   "127.0.0.1:8080"]
-        env:
-        - name: PORT_NUM
-          value: "{{ .Values.elasticsearch.port }}"
-      {{- end }}
-{{- if .Values.extraVolumeMounts }}
-{{ toYaml .Values.extraVolumeMounts | indent 8 }}
-{{- end }}
-        ports:
-{{- range $port := .Values.service.ports }}
-          - name: {{ $port.name }}
-            containerPort: {{ $port.port }}
-{{- if $port.protocol }}
-            protocol: {{ $port.protocol }}
-{{- end }}
-{{- end }}
-{{- if .Values.livenessProbe.enabled }}
+{{- if .Values.livenessProbe.enabled }}  #pointing to fluentd Dockerfile 
         # Liveness probe is aimed to help in situarions where fluentd
         # silently hangs for no apparent reasons until manual restart.
         # The idea of this probe is that if fluentd is not queueing or
@@ -176,6 +155,28 @@ spec:
                 exit 1;
               fi;
 {{- end }}
+      {{- if .Values.awsSigningSidecar.enabled }}
+      - name: {{ include "fluentd-elasticsearch.fullname" . }}-aws-es-proxy
+        image: {{ .Values.awsSigningSidecar.image.repository }}:{{ .Values.awsSigningSidecar.image.tag }}
+        imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
+        args: ["-endpoint", "{{ .Values.elasticsearch.scheme }}://{{ .Values.elasticsearch.host }}:{{ .Values.elasticsearch.port }}",
+               "-listen",   "127.0.0.1:8080"]
+        env:
+        - name: PORT_NUM
+          value: "{{ .Values.elasticsearch.port }}"
+      {{- end }}
+{{- if .Values.extraVolumeMounts }}
+{{ toYaml .Values.extraVolumeMounts | indent 8 }}
+{{- end }}
+        ports:
+{{- range $port := .Values.service.ports }}
+          - name: {{ $port.name }}
+            containerPort: {{ $port.port }}
+{{- if $port.protocol }}
+            protocol: {{ $port.protocol }}
+{{- end }}
+{{- end }}
+
       terminationGracePeriodSeconds: 30
       volumes:
       - name: varlog
