--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -112,12 +112,12 @@ spec:
 {{ toYaml .Values.resources | indent 10 }}
         volumeMounts:
         - name: varlog
-          mountPath: {{ .Values.hostLogDir.varLog }}
+          mountPath: /var/log
         - name: varlibdockercontainers
-          mountPath: {{ .Values.hostLogDir.dockerContainers }}
+          mountPath: /var/lib/docker/containers
           readOnly: true
         - name: libsystemddir
-          mountPath: {{ .Values.hostLogDir.libSystemdDir }}
+          mountPath: /usr/lib64
           readOnly: true
         - name: config-volume
           mountPath: /etc/fluent/config.d
@@ -181,14 +181,14 @@ spec:
       volumes:
       - name: varlog
         hostPath:
-          path: /var/log
+          path: {{ .Values.hostLogDir.varLog }}
       - name: varlibdockercontainers
         hostPath:
-          path: /var/lib/docker/containers
+          path: {{ .Values.hostLogDir.dockerContainers }}
       # It is needed to copy systemd library to decompress journals
       - name: libsystemddir
         hostPath:
-          path: /usr/lib64
+          path: {{ .Values.hostLogDir.libSystemdDir }}
       - name: config-volume
         configMap:
           name: {{ include "fluentd-elasticsearch.fullname" . }}
