Add fluentd args (#98)
* Add fluentd args

Signed-off-by: olivier beyler <olivier.beyler@orange.com>

* fix lint-chart

Signed-off-by: olivier beyler <olivier.beyler@orange.com>

* change to camelcase

Signed-off-by: olivier beyler <olivier.beyler@orange.com>

* fixup (#101)

Signed-off-by: olivier beyler <olivier.beyler@orange.com>

* set chart version to 2.11.0

Signed-off-by: olivier beyler <olivier.beyler@orange.com>

--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -58,7 +58,7 @@ spec:
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         env:
         - name: FLUENTD_ARGS
-          value: --no-supervisor -q
+          value: {{ .Values.fluentdArgs | quote }}
         - name: OUTPUT_HOST
           {{- if .Values.awsSigningSidecar.enabled }}
           value: 'localhost'
