--- a/charts/fluentd-elasticsearch/Chart.yaml
+++ b/charts/fluentd-elasticsearch/Chart.yaml
@@ -1,5 +1,6 @@
+apiVersion: v1
 name: fluentd-elasticsearch
-version: 3.0.0
+version: 3.0.1
 appVersion: 2.5.2
 home: https://www.fluentd.org/
 description: A Fluentd Helm chart for Kubernetes with Elasticsearch output
