changed docker image repo to quay.io (#128)
Signed-off-by: André Bauer <andre.bauer@kiwigrid.com>

--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: gcr.io/fluentd-elasticsearch/fluentd
+  repository: quay.io/fluentd_elasticsearch/fluentd
 ## Specify an imagePullPolicy (Required)
 ## It's recommended to change this to 'Always' if the image tag is 'latest'
 ## ref: http://kubernetes.io/docs/user-guide/images/#updating-images
