--- a/charts/fluentd-elasticsearch/templates/service.yaml
+++ b/charts/fluentd-elasticsearch/templates/service.yaml
@@ -1,30 +1,31 @@
 {{- if .Values.service }}
+{{- range $port := .Values.service.ports }}
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "fluentd-elasticsearch.fullname" . }}
+  name: {{ include "fluentd-elasticsearch.fullname" $ | trunc 50 }}-{{ $port.name | trunc 12 }}
   labels:
-    app.kubernetes.io/name: {{ include "fluentd-elasticsearch.name" . }}
-    helm.sh/chart: {{ include "fluentd-elasticsearch.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/name: {{ include "fluentd-elasticsearch.name" $ }}
+    helm.sh/chart: {{ include "fluentd-elasticsearch.chart" $ }}
+    app.kubernetes.io/instance: {{ $.Release.Name }}
+    app.kubernetes.io/managed-by: {{ $.Release.Service }}
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ $port.type }}
   ports:
-  {{- range $port := .Values.service.ports }}
     - name: {{ $port.name }}
       port: {{ $port.port }}
       targetPort: {{ $port.port }}
-      {{- if $port.nodePort }}
+      {{- if and ($port.nodePort) (eq $port.type "NodePort") }}
       nodePort: {{ $port.nodePort }}
       {{- end }}
       {{- if $port.protocol }}
       protocol: {{ $port.protocol }}
       {{- end }}
-  {{- end }}
   selector:
-    app.kubernetes.io/name: {{ include "fluentd-elasticsearch.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/name: {{ include "fluentd-elasticsearch.name" $ }}
+    app.kubernetes.io/instance: {{ $.Release.Name }}
+{{- end }}
 {{- end }}
