[fluentd-elasticsearch] Fix bug introduced in #127 (#141)
* Fix bug introduced in #127

Signed-off-by: Chris O'Brien <chrisob91@gmail.com>

* Bump chart version

Signed-off-by: Chris O'Brien <chrisob91@gmail.com>

* Update incorrect example in values.yaml

Signed-off-by: Chris O'Brien <chrisob91@gmail.com>

* Bump chart version again

Signed-off-by: Chris O'Brien <chrisob91@gmail.com>

--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -131,9 +131,9 @@ affinity: {}
 nodeSelector: {}
 
 service: {}
-  # type: ClusterIP
   # ports:
   #   - name: "monitor-agent"
+  #     type: ClusterIP
   #     port: 24231
 
 serviceMonitor:
@@ -142,6 +142,7 @@ serviceMonitor:
   ##
   enabled: false
   interval: 10s
+  path: /metrics
   port: 24231
   labels: {}
 
