[fluentd-elasticsearch] Allow elasticsearch path to be specified (#144)
* add support for specifying elasticsearch path

Signed-off-by: Lee Spottiswood <lee.spottiswood@ukfast.co.uk>

* version bump

Signed-off-by: Lee Spottiswood <lee.spottiswood@ukfast.co.uk>

* minor version bump

Signed-off-by: Lee Spottiswood <lee.spottiswood@ukfast.co.uk>

* bump chart version to 4.5.0

Signed-off-by: Lee Spottiswood <me@lee.io>

--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -475,6 +475,7 @@ data:
       type_name _doc
       host "#{ENV['OUTPUT_HOST']}"
       port "#{ENV['OUTPUT_PORT']}"
+      path "#{ENV['OUTPUT_PATH']}"
       scheme "#{ENV['OUTPUT_SCHEME']}"
       ssl_verify "#{ENV['OUTPUT_SSL_VERIFY']}"
       ssl_version "#{ENV['OUTPUT_SSL_VERSION']}"
