[fluentd-elasticsearch] Make auth.password value optional (#147)
* [fluentd-elasticsearch] Make auth.password value optional

This makes it possible to get the Elasticsearch password from a
secret instead of storing it in plain text, e.g.:

elasticsearch:
  auth:
    enabled: true
    user: elastic
    password: ""
secret:
- name: OUTPUT_PASSWORD
  secret_name: elasticsearch
  secret_key: password

Signed-off-by: Simon Kollberg <simonkollberg@gmail.com>

* [fluentd-elasticsearch] Bump chart version

Signed-off-by: Simon Kollberg <simonkollberg@gmail.com>

--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -76,8 +76,10 @@ spec:
 {{- if .Values.elasticsearch.auth.enabled }}
         - name: OUTPUT_USER
           value: {{ .Values.elasticsearch.auth.user | quote }}
+{{- if .Values.elasticsearch.auth.password }}
         - name: OUTPUT_PASSWORD
           value: {{ .Values.elasticsearch.auth.password | quote }}
+{{- end }}
 {{- end }}
         - name: LOGSTASH_PREFIX
           value: {{ .Values.elasticsearch.logstashPrefix | quote }}
