--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -58,7 +58,9 @@ elasticsearch:
   scheme: "http"
   sslVerify: true
   sslVersion: "TLSv1_2"
+  typeName: "_doc"
   logLevel: "info"
+
 
 # If you want to change args of fluentd process
 # by example you can add -vv to launch with trace log
