--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -7,7 +7,9 @@ metadata:
     helm.sh/chart: {{ include "fluentd-elasticsearch.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
+    {{- if semverCompare "> 1.6" .Capabilities.KubeVersion.GitVersion }}
     kubernetes.io/cluster-service: "true"
+    {{- end }}
     addonmanager.kubernetes.io/mode: Reconcile
 {{- if .Values.annotations }}
   annotations:
@@ -27,7 +29,9 @@ spec:
         helm.sh/chart: {{ include "fluentd-elasticsearch.chart" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
         app.kubernetes.io/managed-by: {{ .Release.Service }}
+        {{- if semverCompare "> 1.6" .Capabilities.KubeVersion.GitVersion }}
         kubernetes.io/cluster-service: "true"
+        {{- end }}
       annotations:
         {{- if semverCompare "< 1.13" .Capabilities.KubeVersion.GitVersion }}
         # This annotation ensures that fluentd does not get evicted if the node
