[fluentd-elasticsearch] generate labels from template (#158)
* updated fluentd image to 2.7.0

Signed-off-by: André Bauer <monotek23@gmail.com>

* bumped version

Signed-off-by: André Bauer <monotek23@gmail.com>

* genreate labels from template

Signed-off-by: André Bauer <monotek23@gmail.com>

* fixed indent

Signed-off-by: André Bauer <monotek23@gmail.com>

--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -3,10 +3,7 @@ kind: DaemonSet
 metadata:
   name: {{ include "fluentd-elasticsearch.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "fluentd-elasticsearch.name" . }}
-    helm.sh/chart: {{ include "fluentd-elasticsearch.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+{{ include "fluentd-elasticsearch.labels" . | indent 4 }}
     {{- if semverCompare "> 1.6" .Capabilities.KubeVersion.GitVersion }}
     kubernetes.io/cluster-service: "true"
     {{- end }}
@@ -25,10 +22,7 @@ spec:
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ include "fluentd-elasticsearch.name" . }}
-        helm.sh/chart: {{ include "fluentd-elasticsearch.chart" . }}
-        app.kubernetes.io/instance: {{ .Release.Name }}
-        app.kubernetes.io/managed-by: {{ .Release.Service }}
+{{ include "fluentd-elasticsearch.labels" . | indent 8 }}
         {{- if semverCompare "> 1.6" .Capabilities.KubeVersion.GitVersion }}
         kubernetes.io/cluster-service: "true"
         {{- end }}
