[fluentd-elasticsearch] fixed labels in service range loop (#163)
* updated fluentd image to 2.7.0

Signed-off-by: André Bauer <monotek23@gmail.com>

* bumped version

Signed-off-by: André Bauer <monotek23@gmail.com>

* fixed labels in service range loop

* removed blank line

--- a/charts/fluentd-elasticsearch/templates/service.yaml
+++ b/charts/fluentd-elasticsearch/templates/service.yaml
@@ -7,7 +7,7 @@ kind: Service
 metadata:
   name: {{ include "fluentd-elasticsearch.fullname" $ | trunc 50 }}-{{ $port.name | trunc 12 }}
   labels:
-{{ include "fluentd-elasticsearch.labels" . | indent 4 }}
+{{ include "fluentd-elasticsearch.labels" $ | indent 4 }}
     {{- if semverCompare "> 1.6" $.Capabilities.KubeVersion.GitVersion }}
     kubernetes.io/cluster-service: "true"
     {{- end }}
