[fluentd-elasticsearch] allow plugins install (#182)
* added additional plugins support

fix additional plugins version

bump version

Signed-off-by: charles-edouard.breteche <charles.breteche@agriconomie.com>

* bash absolute path

Signed-off-by: charles-edouard.breteche <charles.breteche@agriconomie.com>

* updated readme

Signed-off-by: charles-edouard.breteche <charles.breteche@agriconomie.com>

--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -54,6 +54,17 @@ spec:
       - name: {{ include "fluentd-elasticsearch.fullname" . }}
         image:  "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
+        {{- if .Values.additionalPlugins }}
+        command:
+          - /bin/bash
+        args:
+          - '-c'
+          - >-
+            {{- range .Values.additionalPlugins }}
+            gem install {{ .name }} --version {{ .version }} &&
+            {{- end }}
+            /run.sh
+        {{- end }}
         env:
         - name: FLUENTD_ARGS
           value: {{ .Values.fluentdArgs | quote }}
