--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -80,6 +80,11 @@ secret:
 #   secret_name: elasticsearch
 #   secret_key: password
 
+# If you want to add plugins at start time
+additionalPlugins:
+# - name: fluent-plugin-s3
+#   version: 1.1.11
+
 rbac:
   create: true
 
