removed `^` from the format (#169)
* removed `^` from the format

Getting so many errors due to the messages below.

```
2019-08-21T19:14:05Z docker time="2019-08-21T19:14:05.602349500Z" level=debug msg="Calling GET /v1.38/containers/json?all=1&filters=%7B%22label%22%3A%7B%22io.kubernetes.docker.type%3Dcontainer%22%3Atrue%7D%7D&limit=0"
```

In order to fix it, removed the leading `^` from the format.

Signed-off-by: Cengiz Ilerler <cilerler@gmail.com>

* Update Chart.yaml

Signed-off-by: Cengiz Ilerler <cilerler@gmail.com>

--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -214,7 +214,7 @@ data:
     <source>
       @id docker.log
       @type tail
-      format /^time="(?<time>[^)]*)" level=(?<severity>[^ ]*) msg="(?<message>[^"]*)"( err="(?<error>[^"]*)")?( statusCode=($<status_code>\d+))?/
+      format /time="(?<time>[^)]*)" level=(?<severity>[^ ]*) msg="(?<message>[^"]*)"( err="(?<error>[^"]*)")?( statusCode=($<status_code>\d+))?/
       path /var/log/docker.log
       pos_file /var/log/docker.log.pos
       tag docker
