[fluentd-elasticsearch] Fix FluentdRecordsCountsHigh prometheus metric (#193)
* Fix FluentdRecordsCountsHigh prometheus metric

Signed-off-by: Thomas FREYSS <thomas.freyss@gmail.com>

* Bump chart version

Signed-off-by: Thomas FREYSS <thomas.freyss@gmail.com>

--- a/charts/fluentd-elasticsearch/templates/prometheusrule.yaml
+++ b/charts/fluentd-elasticsearch/templates/prometheusrule.yaml
@@ -58,7 +58,7 @@ spec:
         description: In the last 5 minutes, fluentd queues increased 50%. Current value is {{ "{{ $value }}" }}
 
     - alert: FluentdRecordsCountsHigh
-      expr: sum(rate(fluentd_record_counts{job="{{ .Release.Name }}"}[5m])) BY (instance) >  (3 * sum(rate(fluentd_record_counts{job="{{ .Release.Name }}"}[15m])) BY (instance))
+      expr: sum(rate(fluentd_output_status_emit_records{job="{{ .Release.Name }}"}[5m])) BY (instance) >  (3 * sum(rate(fluentd_output_status_emit_records{job="{{ .Release.Name }}"}[15m])) BY (instance))
       for: 1m
       labels:
         service: fluentd
