[fluentd-elasticsearch] fixes #217 (#218)
* Fix

https://github.com/kiwigrid/helm-charts/issues/217
Signed-off-by: thomaszimmer <thomas.zimmer@jobtoday.com>

* Update Chart.yaml

Signed-off-by: thomaszimmer <thomas.zimmer@jobtoday.com>

--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -167,7 +167,7 @@ spec:
                "-listen",   "127.0.0.1:8080"]
         env:
         - name: PORT_NUM
-          value: "{{ .Values.elasticsearch.port }}"
+          value: '8080'
       {{- end }}
       terminationGracePeriodSeconds: 30
       volumes:
