[fluentd-elasticsearch] Fixed a typo in daemonset.yaml (#221)
* Update daemonset.yaml

Signed-off-by: thomaszimmer <thomas.zimmer@jobtoday.com>

* Update Chart.yaml

Signed-off-by: thomaszimmer <thomas.zimmer@jobtoday.com>

* Update daemonset.yaml

Signed-off-by: thomaszimmer <thomas.zimmer@jobtoday.com>

--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -70,7 +70,7 @@ spec:
           value: {{ .Values.fluentdArgs | quote }}
         - name: OUTPUT_HOST
           {{- if .Values.awsSigningSidecar.enabled }}
-          value: "{{ .Values.awsSigningSidecar.network.address | quote }}"
+          value: {{ .Values.awsSigningSidecar.network.address | quote }}
           {{- else }}
           value: {{ .Values.elasticsearch.host | quote }}
           {{- end }}
@@ -167,7 +167,7 @@ spec:
                "-listen",   "{{ .Values.awsSigningSidecar.network.address }}:{{ .Values.awsSigningSidecar.network.port }}"]
         env:
         - name: PORT_NUM
-          value: value: {{ .Values.awsSigningSidecar.network.port | quote }}
+          value: {{ .Values.awsSigningSidecar.network.port | quote }}
         resources:
 {{ toYaml .Values.awsSigningSidecar.resources | indent 10 }}
         volumeMounts:
