--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -174,6 +174,7 @@ data:
         @type multi_format
         <pattern>
           format json
+          time_key ""
         </pattern>
         <pattern>
           format none
