Retaining timestamp from previous json parse. (#276)
The proposed fix in pull-request #257 did not work on our setup.
But I did find an option on fluentd to retain time, even though embedded json is parsed.
We had the exact problem described in issue #199, and this seems to fix it.
Also the time_key "" did not do anything, so removed it.

Signed-off-by: Anders Nyvang <nanders@nanders.com>

Co-authored-by: André Bauer <monotek@users.noreply.github.com>

--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -170,13 +170,13 @@ data:
       @id filter_parser
       @type parser
       key_name log
+      reserve_time true
       reserve_data true
       remove_key_name_field true
       <parse>
         @type multi_format
         <pattern>
           format json
-          time_key ""
         </pattern>
         <pattern>
           format none
