[fluentd-elasticsearch] updated fluentd image (#301)
* updated fluentd image

Signed-off-by: André Bauer <monotek23@gmail.com>

* added kubeval & cleaned up readme

Signed-off-by: André Bauer <monotek23@gmail.com>

* debug

Signed-off-by: André Bauer <monotek23@gmail.com>

* debug

Signed-off-by: André Bauer <monotek23@gmail.com>

* debug

Signed-off-by: André Bauer <monotek23@gmail.com>

* debug

Signed-off-by: André Bauer <monotek23@gmail.com>

* changed chart changed detection

Signed-off-by: André Bauer <monotek23@gmail.com>

* changed chart changed detection

Signed-off-by: André Bauer <monotek23@gmail.com>

* show chart changes

Signed-off-by: André Bauer <monotek23@gmail.com>

* changed needs

Signed-off-by: André Bauer <monotek23@gmail.com>

* changed indent

Signed-off-by: André Bauer <monotek23@gmail.com>

* changed indent

Signed-off-by: André Bauer <monotek23@gmail.com>

--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -63,7 +63,7 @@ spec:
             {{- range .Values.additionalPlugins }}
             gem install {{ .name }} --version {{ .version }} &&
             {{- end }}
-            /run.sh
+            /entrypoint.sh
         {{- end }}
         env:
         - name: FLUENTD_ARGS
