use version 0.9 of aws proxy again (#304)
Signed-off-by: André Bauer <monotek23@gmail.com>

--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -29,7 +29,7 @@ awsSigningSidecar:
     address: localhost
   image:
     repository: abutaha/aws-es-proxy
-    tag: latest
+    tag: 0.9
 
 # Specify to use specific priorityClass for pods
 # ref: https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
