[fluentd-elasticsearch] Allow multiple hosts in config (#331)
* first working version

Signed-off-by: Samuel Bégin <samuel.begin@optelgroup.com>

* version bump, parameters deprecation and aws sidecar support

Signed-off-by: Samuel Bégin <samuel.begin@optelgroup.com>

* note about port parameter being deprecated

Signed-off-by: Samuel Bégin <samuel.begin@optelgroup.com>

--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -497,8 +497,7 @@ data:
       @type "#{ENV['OUTPUT_TYPE']}"
       @log_level "#{ENV['OUTPUT_LOG_LEVEL']}"
       include_tag_key true
-      host "#{ENV['OUTPUT_HOST']}"
-      port "#{ENV['OUTPUT_PORT']}"
+      hosts "#{ENV['OUTPUT_HOSTS']}"
       path "#{ENV['OUTPUT_PATH']}"
       scheme "#{ENV['OUTPUT_SCHEME']}"
       ssl_verify "#{ENV['OUTPUT_SSL_VERIFY']}"
