--- a/charts/fluentd-elasticsearch/templates/metrics-service.yaml
+++ b/charts/fluentd-elasticsearch/templates/metrics-service.yaml
@@ -1,4 +1,5 @@
 {{- if or (.Values.serviceMonitor.enabled) (.Values.serviceMetric.enabled) }}
+{{- $striped_version := (split "-" .Capabilities.KubeVersion.GitVersion)._0 -}}
 ---
 apiVersion: v1
 kind: Service
@@ -6,7 +7,7 @@ metadata:
   name: {{ include "fluentd-elasticsearch.fullname" $ }}-metrics
   labels:
 {{ include "fluentd-elasticsearch.labels" . | indent 4 }}
-    {{- if semverCompare "> 1.6" .Capabilities.KubeVersion.GitVersion }}
+    {{- if semverCompare "< 1.6" $striped_version }}
     kubernetes.io/cluster-service: "true"
     {{- end }}
     addonmanager.kubernetes.io/mode: Reconcile
