--- a/charts/fluentd-elasticsearch/templates/pod-security-policy.yaml
+++ b/charts/fluentd-elasticsearch/templates/pod-security-policy.yaml
@@ -1,5 +1,6 @@
 {{- if .Values.podSecurityPolicy.enabled }}
-{{- if semverCompare "> 1.15" .Capabilities.KubeVersion.GitVersion -}}
+{{- $striped_version := (split "-" .Capabilities.KubeVersion.GitVersion)._0 -}}
+{{- if semverCompare "> 1.15" $striped_version -}}
 apiVersion: policy/v1beta1
 {{- else -}}
 apiVersion: extensions/v1beta1
@@ -9,7 +10,7 @@ metadata:
   name: {{ template "fluentd-elasticsearch.fullname" . }}
   labels:
 {{ include "fluentd-elasticsearch.labels" . | indent 4 }}
-    {{- if semverCompare "> 1.6" .Capabilities.KubeVersion.GitVersion }}
+    {{- if semverCompare "< 1.6" $striped_version }}
     kubernetes.io/cluster-service: "true"
     {{- end }}
     addonmanager.kubernetes.io/mode: Reconcile
