[fluentd-elasticsearch] adding request timeout config (#355)
* adding request timeout config

Signed-off-by: harshavardhanc <harshavardhanc95@gmail.com>

* Update README.md

Signed-off-by: harshavardhanc <harshavardhanc95@gmail.com>

* Chart version bump up

Signed-off-by: harshavardhanc <harshavardhanc95@gmail.com>

* adding request timeout as env variable

Signed-off-by: harshavardhanc <harshavardhanc95@gmail.com>

* chart version bump up

Signed-off-by: harshavardhanc <harshavardhanc95@gmail.com>

--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -78,6 +78,7 @@ elasticsearch:
   reconnectOnError: true
   reloadOnFailure: false
   reloadConnections: false
+  requestTimeout: "5s"
   buffer:
     enabled: true
     type: "file"
