--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -521,6 +521,7 @@ data:
       reconnect_on_error "#{ENV['OUTPUT_RECONNECT_ON_ERROR']}"
       reload_on_failure "#{ENV['OUTPUT_RELOAD_ON_FAILURE']}"
       reload_connections "#{ENV['OUTPUT_RELOAD_CONNECTIONS']}"
+      request_timeout "#{ENV['OUTPUT_REQUEST_TIMEOUT']}"
 {{- if .Values.elasticsearch.buffer.enabled }}
       <buffer>
         @type "#{ENV['OUTPUT_BUFFER_TYPE']}"
