Added setter for logstash prefixSeparator and dateformat (#375)
* added setter for logstash prefixSeparator and dateformat

Signed-off-by: Raúl Garcia Sanchez <garcia@denic.de>

* added setter for logstash prefixSeparator and dateformat

Signed-off-by: Raúl Garcia Sanchez <garcia@denic.de>

* use default values instead of uncomment

Signed-off-by: Raúl Garcia Sanchez <garcia@denic.de>

* update chart version

Signed-off-by: Raúl Garcia Sanchez <garcia@denic.de>

Co-authored-by: Raúl Garcia Sanchez <garcia@denic.de>

--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -513,7 +513,9 @@ data:
 {{- end }}
 {{- if .Values.elasticsearch.logstash.enabled }}
       logstash_format "#{ENV['LOGSTASH_FORMAT']}"
+      logstash_dateformat "#{ENV['LOGSTASH_DATEFORMAT']}"
       logstash_prefix "#{ENV['LOGSTASH_PREFIX']}"
+      logstash_prefix_separator "#{ENV['LOGSTASH_PREFIX_SEPARATOR']}"
 {{- else }}
       logstash_format "#{ENV['LOGSTASH_FORMAT']}"
       index_name "#{ENV['INDEX_NAME']}"
